// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic usage 1`] = `
[
  {
    "apiVersion": "v1",
    "kind": "ServiceAccount",
    "metadata": {
      "labels": {
        "app.kubernetes.io/instance": "test-sample-c8e2763d",
        "app.kubernetes.io/managed-by": "Helm",
        "app.kubernetes.io/name": "helm-sample",
        "app.kubernetes.io/version": "1.16.0",
        "helm.sh/chart": "helm-sample-0.1.0",
      },
      "name": "test-sample-c8e2763d-helm-sample",
    },
  },
  {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": {
      "labels": {
        "app.kubernetes.io/instance": "test-sample-c8e2763d",
        "app.kubernetes.io/managed-by": "Helm",
        "app.kubernetes.io/name": "helm-sample",
        "app.kubernetes.io/version": "1.16.0",
        "helm.sh/chart": "helm-sample-0.1.0",
      },
      "name": "test-sample-c8e2763d-helm-sample",
    },
    "spec": {
      "ports": [
        {
          "name": "http",
          "port": 80,
          "protocol": "TCP",
          "targetPort": "http",
        },
      ],
      "selector": {
        "app.kubernetes.io/instance": "test-sample-c8e2763d",
        "app.kubernetes.io/name": "helm-sample",
      },
      "type": "ClusterIP",
    },
  },
  {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": {
      "labels": {
        "app.kubernetes.io/instance": "test-sample-c8e2763d",
        "app.kubernetes.io/managed-by": "Helm",
        "app.kubernetes.io/name": "helm-sample",
        "app.kubernetes.io/version": "1.16.0",
        "helm.sh/chart": "helm-sample-0.1.0",
      },
      "name": "test-sample-c8e2763d-helm-sample",
    },
    "spec": {
      "replicas": 1,
      "selector": {
        "matchLabels": {
          "app.kubernetes.io/instance": "test-sample-c8e2763d",
          "app.kubernetes.io/name": "helm-sample",
        },
      },
      "template": {
        "metadata": {
          "labels": {
            "app.kubernetes.io/instance": "test-sample-c8e2763d",
            "app.kubernetes.io/name": "helm-sample",
          },
        },
        "spec": {
          "containers": [
            {
              "image": "nginx:1.16.0",
              "imagePullPolicy": "IfNotPresent",
              "livenessProbe": {
                "httpGet": {
                  "path": "/",
                  "port": "http",
                },
              },
              "name": "helm-sample",
              "ports": [
                {
                  "containerPort": 80,
                  "name": "http",
                  "protocol": "TCP",
                },
              ],
              "readinessProbe": {
                "httpGet": {
                  "path": "/",
                  "port": "http",
                },
              },
              "resources": {},
              "securityContext": {},
            },
          ],
          "securityContext": {},
          "serviceAccountName": "test-sample-c8e2763d-helm-sample",
        },
      },
    },
  },
]
`;

exports[`values can be specified when defining the chart 1`] = `
[
  {
    "apiVersion": "v1",
    "kind": "ServiceAccount",
    "metadata": {
      "labels": {
        "app.kubernetes.io/instance": "test-sample-c8e2763d",
        "app.kubernetes.io/managed-by": "Helm",
        "app.kubernetes.io/name": "helm-sample",
        "app.kubernetes.io/version": "1.16.0",
        "helm.sh/chart": "helm-sample-0.1.0",
      },
      "name": "test-sample-c8e2763d-helm-sample",
    },
  },
  {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": {
      "labels": {
        "app.kubernetes.io/instance": "test-sample-c8e2763d",
        "app.kubernetes.io/managed-by": "Helm",
        "app.kubernetes.io/name": "helm-sample",
        "app.kubernetes.io/version": "1.16.0",
        "helm.sh/chart": "helm-sample-0.1.0",
      },
      "name": "test-sample-c8e2763d-helm-sample",
    },
    "spec": {
      "ports": [
        {
          "name": "http",
          "port": 80,
          "protocol": "TCP",
          "targetPort": "http",
        },
      ],
      "selector": {
        "app.kubernetes.io/instance": "test-sample-c8e2763d",
        "app.kubernetes.io/name": "helm-sample",
      },
      "type": "ClusterIP",
    },
  },
  {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": {
      "labels": {
        "app.kubernetes.io/instance": "test-sample-c8e2763d",
        "app.kubernetes.io/managed-by": "Helm",
        "app.kubernetes.io/name": "helm-sample",
        "app.kubernetes.io/version": "1.16.0",
        "helm.sh/chart": "helm-sample-0.1.0",
      },
      "name": "test-sample-c8e2763d-helm-sample",
    },
    "spec": {
      "replicas": 889,
      "selector": {
        "matchLabels": {
          "app.kubernetes.io/instance": "test-sample-c8e2763d",
          "app.kubernetes.io/name": "helm-sample",
        },
      },
      "template": {
        "metadata": {
          "labels": {
            "app.kubernetes.io/instance": "test-sample-c8e2763d",
            "app.kubernetes.io/name": "helm-sample",
          },
        },
        "spec": {
          "containers": [
            {
              "image": "nginx:1.16.0",
              "imagePullPolicy": "IfNotPresent",
              "livenessProbe": {
                "httpGet": {
                  "path": "/",
                  "port": "http",
                },
              },
              "name": "helm-sample",
              "ports": [
                {
                  "containerPort": 80,
                  "name": "http",
                  "protocol": "TCP",
                },
              ],
              "readinessProbe": {
                "httpGet": {
                  "path": "/",
                  "port": "http",
                },
              },
              "resources": {},
              "securityContext": {},
            },
          ],
          "nodeSelector": {
            "selectMe": "boomboom",
          },
          "securityContext": {},
          "serviceAccountName": "test-sample-c8e2763d-helm-sample",
        },
      },
    },
  },
]
`;
